# Telegram_cleaner

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/: example_usage.py
telegramcleaner/: __init__.py  cleaner.py  cli.py  config.py  console.py  wizard.py
